RESOLVED FIXED24261
Fix custom V8 bindings scrubbing errors.
https://bugs.webkit.org/show_bug.cgi?id=24261
Summary Fix custom V8 bindings scrubbing errors.
Dimitri Glazkov (Google)
Reported 2009-02-28 08:42:13 PST
fast/dom/CSSStyleDeclaration/css-properties-case-sensitive.html was failing because of me.
Attachments
Fix V8 custom binding scrubbing error, v1. (3.48 KB, patch)
2009-02-28 08:48 PST, Dimitri Glazkov (Google)
fishd: review+
Fix erroneous traversal return values, v1. (2.03 KB, patch)
2009-02-28 21:07 PST, Dimitri Glazkov (Google)
fishd: review+
Fix return types in helper converters in V8Binding.h (1.27 KB, patch)
2009-03-03 21:28 PST, Dimitri Glazkov (Google)
fishd: review+
Dimitri Glazkov (Google)
Comment 1 2009-02-28 08:48:04 PST
Created attachment 28117 [details] Fix V8 custom binding scrubbing error, v1. WebCore/ChangeLog | 16 ++++++++++++++++ .../v8/custom/V8CSSStyleDeclarationCustom.cpp | 19 +++++++------------ 2 files changed, 23 insertions(+), 12 deletions(-)
Darin Fisher (:fishd, Google)
Comment 2 2009-02-28 10:38:28 PST
Comment on attachment 28117 [details] Fix V8 custom binding scrubbing error, v1. LGTM
Dimitri Glazkov (Google)
Comment 3 2009-02-28 21:00:35 PST
CSSStyleDeclaration fix landed as http://trac.webkit.org/changeset/41324.
Dimitri Glazkov (Google)
Comment 4 2009-02-28 21:04:33 PST
These revealed that I mistakenly replaced v8::Null() with v8::Undefined(). LayoutTests/fast/dom/TreeWalker/TreeWalker-currentNode.html LayoutTests/traversal/exception-forwarding.html LayoutTests/traversal/stay-within-root.html
Dimitri Glazkov (Google)
Comment 5 2009-02-28 21:07:55 PST
Created attachment 28133 [details] Fix erroneous traversal return values, v1. WebCore/ChangeLog | 17 +++++++++++++++++ .../bindings/v8/custom/V8NodeIteratorCustom.cpp | 2 +- WebCore/bindings/v8/custom/V8TreeWalkerCustom.cpp | 2 +- 3 files changed, 19 insertions(+), 2 deletions(-)
Darin Fisher (:fishd, Google)
Comment 6 2009-02-28 21:22:26 PST
Comment on attachment 28133 [details] Fix erroneous traversal return values, v1. LGTM
Dimitri Glazkov (Google)
Comment 7 2009-03-02 20:23:40 PST
TreeWalker/NodeIterator fix landed as http://trac.webkit.org/changeset/41325.
Dimitri Glazkov (Google)
Comment 8 2009-03-03 21:22:00 PST
I am ashamed to admit I mixed up return types in V8Binding.h.
Dimitri Glazkov (Google)
Comment 9 2009-03-03 21:28:07 PST
Created attachment 28256 [details] Fix return types in helper converters in V8Binding.h WebCore/ChangeLog | 13 +++++++++++++ WebCore/bindings/v8/V8Binding.h | 4 ++-- 2 files changed, 15 insertions(+), 2 deletions(-)
Dimitri Glazkov (Google)
Comment 10 2009-03-03 21:41:54 PST
Return type fix landed as http://trac.webkit.org/changeset/41415.
Note You need to log in before you can comment on or make changes to this bug.