WebCore/bindings/v8/custom/V8CSSStyleDeclarationCustom.cpp
@@ -88,8 +88,7 @@ static bool hasCSSPropertyNamePrefix(const String& propertyName, const char* pre
 // not the property name was prefixed with 'pos-' or 'pixel-'.
 static String cssPropertyName(const String& propertyName, bool& hadPixelOrPosPrefix)
 {
-    if (hadPixelOrPosPrefix)
-        hadPixelOrPosPrefix = false;
+    hadPixelOrPosPrefix = false;
 
     unsigned length = propertyName.length();
     if (!length)
@@ -104,20 +103,16 @@ static String cssPropertyName(const String& propertyName, bool& hadPixelOrPosPre
         i += 3;
     else if (hasCSSPropertyNamePrefix(propertyName, "pixel")) {
         i += 5;
-        if (hadPixelOrPosPrefix)
-            hadPixelOrPosPrefix = true;
+        hadPixelOrPosPrefix = true;
     } else if (hasCSSPropertyNamePrefix(propertyName, "pos")) {
         i += 3;
-        if (hadPixelOrPosPrefix)
-            hadPixelOrPosPrefix = true;
+        hadPixelOrPosPrefix = true;
     } else if (hasCSSPropertyNamePrefix(propertyName, "webkit")
             || hasCSSPropertyNamePrefix(propertyName, "khtml")
             || hasCSSPropertyNamePrefix(propertyName, "apple"))
         name.append('-');
-    else {
-        if (WTF::isASCIIUpper(propertyName[0]))
-            return String();
-    }
+    else if (WTF::isASCIIUpper(propertyName[0]))
+        return String();
 
     name.append(WTF::toASCIILower(propertyName[i++]));
 
@@ -144,7 +139,7 @@ NAMED_PROPERTY_GETTER(CSSStyleDeclaration)
     // Search the style declaration.
     CSSStyleDeclaration* imp = V8Proxy::ToNativeObject<CSSStyleDeclaration>(V8ClassIndex::CSSSTYLEDECLARATION, info.Holder());
 
-    bool hadPixelOrPosPrefix;
+    bool hadPixelOrPosPrefix = false;
     String propertyName = cssPropertyName(toWebCoreString(name), hadPixelOrPosPrefix);
 
     // Do not handle non-property names.
@@ -176,7 +171,7 @@ NAMED_PROPERTY_SETTER(CSSStyleDeclaration)
     INC_STATS("DOM.CSSStyleDeclaration.NamedPropertySetter");
     CSSStyleDeclaration* imp = V8Proxy::ToNativeObject<CSSStyleDeclaration>(V8ClassIndex::CSSSTYLEDECLARATION, info.Holder());
 
-    bool hadPixelOrPosPrefix;
+    bool hadPixelOrPosPrefix = false;
     String prop = cssPropertyName(toWebCoreString(name), hadPixelOrPosPrefix);
     if (!CSSStyleDeclaration::isPropertyName(prop))
         return notHandledByInterceptor();
