WebCore/bindings/v8/custom/V8TreeWalkerCustom.cpp
@@ -49,7 +49,7 @@ static inline v8::Handle<v8::Value> toV8(PassRefPtr<Node> object, ScriptState* s
         return throwError(state->exception());
 
     if (!object)
-        return v8::Undefined();
+        return v8::Null();
 
     return V8Proxy::NodeToV8Object(object.get());
 }
